fix bug to work on Firefox

--- a/style.css
+++ b/style.css
@@ -12,10 +12,12 @@ svg{
   padding: 0;
   margin: 0;
   position:fixed;
-  top:0;
-  left:0;
-  bottom:0;
-  right:0;
+  top: 0%;
+  left: 0%;
+  transform: translate(0, 0%);
+  -webkit-transform: translate(0, 0%);
+  -moz-transform: translate(0%, 0%);
+  -ms-transform:translate(0, 0%);
 }
 
 #titleholder{
@@ -26,5 +28,5 @@ svg{
   color: white;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(0%, -50%);
 }
